--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			
 			<div id="Dining" class="box">
-				<a href=".\Dining.html">
+				<a href=".\dining.html">
 				<h1>Dining<br>(Cake)</h1>
 				</a>
 			</div>
