Slight change to Dining just so that i can push this again and try re-run the website

--- a/Dining.html
+++ b/Dining.html
@@ -8,7 +8,7 @@
 	<title></title>
 </head>
 <body>
-	<h1 style="text-align:center;">This page is coming soon</h1>
+	<h1 style="text-align:center;">This page is coming soon.<br>Test, test!</h1>
 
 </body>
 </html>
